<resources>
    <string name="app_name">DetiPapaMama</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="rub">руб.</string>
    <string name="action_filter">Фильтровать</string>
    <string name="action_sort">Сортировать</string>

    <string name="detskie_tovary">Детские товары</string>
    <string name="sport_i_otdykh">Спорт и отдых</string>
    <string name="dom_i_dacha">Дом и дача</string>
    <string name="dosug_i_razvlecheniya">Досуг и развлечения</string>
    <string name="mebel">Мебель</string>

    <string name="sort_popular">Сначала популярные</string>
    <string name="sort_new">Сначала Новинки</string>
    <string name="sort_price_asc">Сначала дешёвые</string>
    <string name="sort_price_desc">Сначала дорогие</string>

    <string name="to_order">Заказать</string>
    <string name="order_name">Ваше имя</string>
    <string name="order_phone">Телефон</string>
    <string name="order_email">Email</string>
    <string name="order_comment">Комментарий</string>

    <string name="notify_new_updates">Оповещать о новинках</string>

    <string name="notify_new_updates_title">У нас новые товары</string>
    <string name="notify_new_updates_desc">скорее посмотрите!</string>
</resources>
