<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/catalog_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/filter_sort_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/catalog_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/action_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/action_filter"
            tools:text="@string/action_filter" />

        <TextView
            android:id="@+id/action_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/action_sort"
            tools:text="@string/action_sort" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_block"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/border_w_shadow"
        android:elevation="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Разделы"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <CheckBox
            android:id="@+id/detskie_tovary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detskie_tovary" />

        <CheckBox
            android:id="@+id/sport_i_otdykh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sport_i_otdykh" />

        <CheckBox
            android:id="@+id/dom_i_dacha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dom_i_dacha" />

        <CheckBox
            android:id="@+id/dosug_i_razvlecheniya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dosug_i_razvlecheniya" />

        <CheckBox
            android:id="@+id/mebel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mebel" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

